# symbolica

./: .gitignore  Landscape and Academic Literature Review.docx  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  researchpapers.txt
examples/: README.md  advanced_features_example.py  basic_example.py  comprehensive_example.py  custom_functions_example.py  enhanced_structured_conditions_example.py  enhanced_tracing_example.py  error_handling_example.py  llm_augmented_rules_example.py  physics_kinematics_example.py  react_style_state_example.py  rule_chaining_example.py  schema_validation_test.py  simple_backward_search_example.py  simple_state_management_example.py  symbolica_router_demo.py  temporal_functions_example.py
examples/01_basic_rules/: customer_approval.yaml  example.py
examples/02_custom_functions/: README.md  example.py  loan_analysis.yaml
examples/03_rule_chaining/: example.py  workflow.yaml
examples/04_llm_integration/: customer_service.yaml  example.py
examples/05_temporal_functions/: example.py  monitoring.yaml
examples/06_backward_chaining/: example.py  planning.yaml  simple_quest.yaml
examples/07_complex_workflows/: example.py
examples/07_complex_workflows/rules/: approval.yaml  monitoring.yaml  workflow.yaml
examples/08_langgraph_integration/: README.md  langgraph_support_agent.py  support_rules.yaml
examples/09_complex_conditions/: README.md  example.py  insurance_underwriting_rules.yaml
examples/10_template_evaluation/: business_templates.yaml  example.py
examples/11_mathematical_temporal/: example.py  scientific_analysis.yaml  scientific_monitoring.yaml
examples/12_prompt_wrapper/: README.md  example.py  robust_loan_approval.yaml
examples/13_engine_fallback/: example.py
symbolica/: __init__.py
symbolica/_internal/: __init__.py  backward_chainer.py  cache.py  dag.py  evaluator.py  executor.py  loader.py  serialization.py  strategies.py  tracer.py  tracing.py  validation.py
symbolica/_internal/evaluation/: __init__.py  builtin_functions.py  core_evaluator.py  evaluator.py  execution_path.py  execution_path_evaluator.py  field_extractor.py  trace_evaluator.py
symbolica/_internal/storage/: __init__.py  temporal_store.py
symbolica/_internal/strategies/: __init__.py  backward_chainer.py  dag.py
symbolica/cli/: __init__.py  __main__.py
symbolica/compilation/: __init__.py  compiler.py  optimizer.py  packager.py  parser.py  validator.py
symbolica/compiler/: __init__.py  ast.py  base.py  dag.py  expressions.py  lint.py  optimiser.py  packager.py  parser.py  schema.py  stages.py
symbolica/core/: __init__.py  engine.py  exceptions.py  expression_parser.py  function_registry.py  interfaces.py  loader.py  models.py  result.py  temporal_service.py  validation_service.py
symbolica/core/config/: __init__.py  engine_config.py  system_config.py
symbolica/core/infrastructure/: __init__.py  function_registry.py  loader.py  schema_validator.py  temporal_service.py  validation_service.py
symbolica/core/services/: __init__.py  function_registry.py  loader.py  temporal_service.py
symbolica/core/validation/: __init__.py  identifier_validator.py  rule_structure_validator.py  schema_constants.py  schema_documentation_generator.py  schema_validator.py  validation_service.py  yaml_structure_validator.py
symbolica/engine/: __init__.py  engine.py  inference.py
symbolica/llm/: __init__.py  client_adapter.py  config.py  exceptions.py  fallback_evaluator.py  prompt_evaluator.py  security.py
symbolica/registry/: __init__.py  globmatch.py
symbolica/runtime/: __init__.py  api.py  evaluator.py  loader.py  trace.py
symbolica/tests/: __init__.py  conftest.py
symbolica/tests/fixtures/: sample_rules.yaml
symbolica/tests/integration/: __init__.py  test_end_to_end.py  test_hybrid_ai_arithmetic.py  test_yaml_workflows.py
symbolica/tests/unit/: __init__.py  test_compilation.py  test_core_models.py  test_custom_functions.py  test_engine.py  test_engine_core.py  test_engine_files.py  test_engine_yaml.py  test_error_scenarios.py  test_expression_actions.py  test_fallback_evaluator.py  test_internal_evaluator.py  test_llm_integration.py  test_llm_security_hardening.py  test_llm_security_tracing.py  test_mock_llm.py  test_rule_chaining.py  test_security.py  test_string_action_values.py  test_temporal_functions.py
symbolica/utils/: __init__.py  helpers.py
visualization/: README.md  __init__.py  ast_visualizer.py  dag_visualizer.py  requirements.txt  rule_visualizer.py
visualization/examples/: advanced_analysis.py  basic_visualization.py  simple_demo.py
