[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "symbolica"
version = "0.1.0"
description = "Deterministic, auditable rule-engine that compiles YAML rules into a hot-reloadable pack."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Symbolica Contributors" }
]
license = { file = "LICENSE" }
keywords = ["rule-engine", "decision", "symbolic", "yaml"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0",
    "typer[all]>=0.9",
    "typing-extensions>=4.10",
]

[project.optional-dependencies]
rest = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
symbolica = "symbolica.cli.__main__:_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["symbolica*"]

[tool.setuptools.package-data]
"symbolica" = ["py.typed"] 